# lowcoderetail

./: .gitignore  create_microservice.py  docker-compose.yml  init-db.sh  mkdocs.yml  pyproject.toml
apps/core/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml  registry_config.py  start-core.sh  worker.py
apps/core/api/endpoints/: __init__.py  auth.py  companies.py  groups.py  i18n.py  users.py
apps/core/data_access/: company_manager.py  user_manager.py
apps/core/models/: __init__.py  company.py  group.py  user.py
apps/core/schemas/: __init__.py  company.py  group.py  user.py
apps/core/tests/: conftest.py
apps/core/tests/api/: test_companies.py  test_groups.py  test_users.py
apps/frontend/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  registry_config.py  ws_manager.py
apps/frontend/api/: __init__.py  auth.py  ui.py
apps/frontend/static/: custom_styles.css
apps/frontend/templates/: base.html  dashboard.html  index.html  login.html
apps/frontend/templates/components/: _customizer.html  _footer.html  _header.html  _loader.html  _sidebar.html
apps/frontend/tests/: __init__.py  conftest.py
apps/purchase/: Dockerfile  config.py  main.py  pyproject.toml  registry_config.py  start-purchase.sh  worker.py
apps/purchase/api/endpoints/: __init__.py  purchase_order_api.py
apps/purchase/data_access/: __init__.py  purchase_order_manager.py
apps/purchase/models/: __init__.py  purchase_order.py
apps/purchase/schemas/: __init__.py  purchase_order_schema.py
apps/purchase/tests/: conftest.py
apps/purchase/tests/api/: test_some_model_api.py
apps/purchase/tests/dam/: test_remote_company_dam.py
core/: Dockerfile  alembic.ini
core/alembic/: env.py  script.py.mako
core/alembic/versions/: b89f9fac9892_initial_database_schema.py
core/app/: config.py  main.py  permissions_init.py  registry_config.py  worker.py
core/app/api/: deps.py
core/app/api/endpoints/: __init__.py  auth.py  companies.py  groups.py  permissions.py  users.py
core/app/data_access/: company_manager.py  user_manager.py
core/app/models/: __init__.py  company.py  group.py  link_models.py  permission.py  user.py
core/app/schemas/: __init__.py  company.py  group.py  permission.py  user.py
core/app/tests/: conftest.py
core/app/tests/api/: test_companies.py  test_groups.py  test_permissions.py  test_users.py
core_sdk/: app_setup.py  config.py  exceptions.py  hash_my_password.py  logging_config.py  registry.py  security.py  worker_setup.py
core_sdk/broker/: setup.py  tasks.py
core_sdk/clients/: base.py
core_sdk/constants/: permissions.py
core_sdk/crud/: factory.py
core_sdk/data_access/: __init__.py  base_manager.py  broker_proxy.py  common.py  local_manager.py  manager_factory.py  remote_manager.py
core_sdk/db/: __init__.py  base_model.py  session.py
core_sdk/dependencies/: auth.py
core_sdk/filters/: base.py
core_sdk/frontend/: __init__.py  base.py  config.py  dependencies.py  exceptions.py  field.py  renderer.py  router.py  static.py  templating.py  types.py  utils.py
core_sdk/frontend/static/css/: custom_styles.css
core_sdk/frontend/static/js/: app.js  componentInitializer.js  htmx.json-enc.js  htmxManager.js  notificationService.js  themeManager.js  titleResolver.js  webSocketManager.js
core_sdk/frontend/templates/: list_page_wrapper.html
core_sdk/frontend/templates/components/: _confirm_delete_modal.html  _field_description_floating.html  _field_description_standalone.html  _field_errors.html  _field_label.html  _field_layout_wrapper.html  _filter_form.html  _form_floating_wrapper.html  _modal_form_wrapper.html  _modal_view_wrapper.html  _modal_wrapper.html  _table_cell.html  _table_row.html  _table_rows_fragment.html  form.html  form_modal_content.html  form_modal_content_for_replacement.html  item_form.html  table.html  view.html
core_sdk/frontend/templates/fields/: _inline_input_wrapper.html  _input_inline.html  checkbox_input.html  checkbox_table.html  checkbox_view.html  date_field.html  date_input.html  (+29 more)
core_sdk/middleware/: auth.py  middleware.py
core_sdk/permissions/: enums.py
core_sdk/schemas/: __init__.py  auth_user.py  base.py  i18n.py  pagination.py  token.py  user.py
core_sdk/services/: i18n_service.py
core_sdk/tests/: conftest.py  test_app_setup.py  test_registry.py  test_security.py  test_worker_setup.py
core_sdk/tests/broker/: test_broker_setup.py
core_sdk/tests/clients/: test_remote_service_client.py
core_sdk/tests/crud/: test_crud_router_factory.py
core_sdk/tests/data_access/: test_base_manager.py  test_broker_proxy.py  test_common.py  test_local_manager.py  test_manager_factory.py  test_remote_manager.py
core_sdk/tests/db/: test_base_model.py  test_session.py
core_sdk/tests/dependencies/: test_auth_dependencies.py
core_sdk/tests/filters/: test_default_filter.py
core_sdk/tests/frontend/: test_frontend_base_router.py
docs/: Dockerfile  architecture.md  creating_new_service.md  index.md  quickstart.md
docs/core_sdk/: app_setup.md  auth_security.md  broker_taskiq.md  config.md  crud_factory.md  data_access.md  database.md  exceptions.md  index.md  logging.md  schemas.md
purchase/app/data_access/: __init__.py
purchase/app/schemas/: __init__.py
wms/: Dockerfile
wms/app/: main.py
(+21 files in other folders)
